# ChaseAI

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_ORDER.md  INSTALL.md  Info.plist  MACOS_DISTRIBUTION_IMPLEMENTATION.md  README.md  ROADMAP.MD  build-macos-app.sh  clippy.toml  package-lock.json  package.json  run-app.sh  rustfmt.toml  verification-protocol.md
.agent/: AGENTS.md
.agent/rules/: rust-coding-standards.md  rust-testing-standards.md  verification-protocol.md
.agent/workflows/: init-workflow.md  openspec-apply.md  openspec-archive.md  openspec-proposal.md  review-and-commit.md
.githooks/: commit-msg
.github/workflows/: macos-release.yml  main.yml
.kiro/steering/: rust-testing-standards.md
docs/: ai-integration.md  building-from-source.md  installation-macos.md  macos-release-checklist.md  verification-workflow.md
homebrew-chaseai/: README.md
homebrew-chaseai/Formula/: chaseai.rb
openspec/: AGENTS.md  project.md
openspec/changes/archive/2026-01-18-scaffold-rust-application/: proposal.md  tasks.md
openspec/changes/archive/2026-01-18-scaffold-rust-application/specs/app/: spec.md
openspec/changes/archive/2026-01-23-instruction-service/: tasks.md
openspec/changes/archive/2026-01-23-instruction-service/specs/context-model/: spec.md
openspec/changes/archive/2026-01-23-instruction-service/specs/context-serving/: spec.md
openspec/changes/archive/2026-01-23-instruction-service/specs/server-lifecycle/: spec.md
openspec/changes/archive/2026-01-23-network-interface-management/: design.md  tasks.md
openspec/changes/archive/2026-01-23-network-interface-management/specs/config-persistence/: spec.md
openspec/changes/archive/2026-01-23-network-interface-management/specs/interface-detection/: spec.md
openspec/changes/archive/2026-01-24-tray-ui/: design.md  tasks.md
openspec/changes/archive/2026-01-24-tray-ui/specs/interaction-flow/: spec.md
openspec/changes/archive/2026-01-24-tray-ui/specs/menu-structure/: spec.md
openspec/changes/archive/2026-01-25-macos-distribution/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-25-macos-distribution/specs/macos-distribution/: spec.md
openspec/changes/archive/2026-01-30-2026-01-28-download-config/: design.md  proposal.md  tasks.md
openspec/changes/instruction-service/: design.md  proposal.md  tasks.md
openspec/changes/network-interface-management/: proposal.md  tasks.md
openspec/changes/network-interface-management/specs/port-management/: spec.md
openspec/changes/tray-ui/: design.md  proposal.md  tasks.md
openspec/specs/ai-integration/: spec.md
openspec/specs/app/: spec.md
openspec/specs/config-persistence/: spec.md
openspec/specs/config-preview/: spec.md
openspec/specs/context-model/: spec.md
openspec/specs/context-serving/: spec.md
openspec/specs/download-config/: spec.md
openspec/specs/interaction-flow/: spec.md
openspec/specs/interface-detection/: spec.md
openspec/specs/macos-distribution/: spec.md
openspec/specs/menu-structure/: spec.md
openspec/specs/port-management/: spec.md
openspec/specs/selective-config-generation/: spec.md
openspec/specs/server-lifecycle/: spec.md
resources/: create-menubar-icon.sh
scripts/: bump-version.sh  check-test-organization.sh  install.sh  prevent-no-verify.sh  publish-release.sh
scripts/macos/: build-macos-app.sh  build-universal.sh  create-archive.sh  create-dmg.sh  generate-homebrew-formula.sh  notarize-app.sh  run-app.sh  sign-app.sh  update-homebrew-formula.sh
src/rs/: app.rs  main.rs
src/rs/config/: generator.rs  mod.rs  network_config.rs  watcher.rs
src/rs/instruction/: context.rs  manager.rs  mod.rs  storage.rs
src/rs/network/: interface_detector.rs  mod.rs  port_config.rs
src/rs/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/rs/server/: instruction_server.rs  mod.rs  pool.rs
src/rs/ui/: dialogs.rs  mod.rs  tray.rs  tray_menu.rs
src/test/rs/: app.rs  config.rs  config_filtering.rs  config_generator.rs  instruction.rs  instruction_context.rs  instruction_integration.rs  instruction_manager.rs  instruction_server.rs  instruction_storage.rs  interface_detector.rs  network.rs  network_config.rs  network_integration.rs  port_config.rs  server.rs  ui.rs  version_check.rs
