[package]
name = "chase-ai"
version = "0.1.0"  # Managed by .version file
edition = "2021"
rust-version = "1.93.0"
authors = ["Mitriyweb <mitriyweb@gmail.com>"]
description = "Controlled Local AI Execution Platform"

[lib]
name = "app"
path = "src/rs/app.rs"

[[test]]
name = "app"
path = "src/test/rs/app.rs"

[[test]]
name = "network_integration"
path = "src/test/rs/network_integration.rs"

[[test]]
name = "instruction_integration"
path = "src/test/rs/instruction_integration.rs"

[[bin]]
name = "chase-ai"
path = "src/rs/main.rs"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
if-addrs = "0.7.0"
toml = "0.8.14"
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
regex = "1.10.0"
notify = "6.1.1"
image = "0.25.1"
tray-icon = "0.14.3"
tao = "0.28.1"
chrono = { version = "0.4.38", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

[dev-dependencies]
tempfile = "3.10.1"
reqwest = { version = "0.12.4", features = ["json"] }
